--- a/Proyecto_Camiones/css/master.css
+++ b/Proyecto_Camiones/css/master.css
@@ -58,7 +58,9 @@ body {
     font-size: 16px;
   }
   
-  .login-box input[type="button"] {
+  .btn-ingreso {
+    width: 100%;
+    margin-bottom: 20px;
     border: none;
     outline: none;
     height: 40px;
@@ -68,7 +70,7 @@ body {
     border-radius: 20px;
   }
   
-  .login-box input[type="button"]:hover {
+  .btn-ingreso:hover {
     cursor: pointer;
     background: #ffc107;
     color: #000;
